added `env_logger` and added handling for strings with space enclosed by `"` instead of `'`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.93"
+env_logger = "0.11.5"
+log = "0.4.22"
 serde = { version = "1.0.215", features = ["derive"], optional = true }
 
 [features]
