--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+crystallib = { git = "https://www.github.com/tectin0/crystallib.git", version = "0.1.0" }
 env_logger = "0.11"
 log = "0.4"
-serde = { version = "1.0.215", features = ["derive"], optional = true }
 
 [features]
-serde = ["dep:serde"]
+serde = ["crystallib/serde"]
 
 [[example]]
 name = "phase_struct"
