--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ crystallib = { git = "https://www.github.com/tectin0/crystallib.git", version = 
 env_logger = "0.11"
 fraction = { version = "0.15.3", optional = true }
 log = "0.4"
+serde = { version = "1.0.217", features = ["derive"], optional = true }
 
 [features]
 default = ["symmetry"]
-serde = ["crystallib/serde"]
-symmetry = ["fraction"]
+serde = ["dep:serde", "crystallib/serde"]
+symmetry = ["dep:fraction"]
 
 
 [[example]]
