--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,17 @@ edition = "2021"
 anyhow = "1.0"
 crystallib = { git = "https://www.github.com/tectin0/crystallib.git", version = "0.1.0" }
 env_logger = "0.11"
-fraction = { version = "0.15.3", optional = true }
+fraction = { version = "0.15.3", optional = true, features = [
+    "serde",
+    "with-serde-support",
+] }
 log = "0.4"
 serde = { version = "1.0.217", features = ["derive"], optional = true }
 
 [features]
 default = ["symmetry"]
 serde = ["dep:serde", "crystallib/serde"]
-symmetry = ["dep:fraction"]
+symmetry = ["dep:fraction", "fraction/serde"]
 
 
 [[example]]
