--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-crystallib = { git = "https://www.github.com/tectin0/crystallib.git", version = "0.1.0" }
+crystallib = { git = "https://www.github.com/tectin0/crystallib.git", version = "0.1.0", features = ["symmetry"] }
 env_logger = "0.11"
 fraction = { version = "0.15.3", optional = true, features = [
     "serde",
